# obelisk

executable/: game
src/: CMakeLists.txt  Makefile  armor.h  boss.cpp  boss.h  cUtil.cpp  cUtil.h  class.cpp  class.h  entity.h  fight.cpp  fight.h  game  game.cpp  game.h  gameMiddle.cpp  gameMiddle.h  gameStart.cpp  gameStart.h  gui.cpp  gui.h  item.h  main.cpp  mainMenu.cpp  mainMenu.h  monster.h  player.cpp  player.h  save.cpp  save.h  save.json  saveTest.json  section.cpp  section.h  skill.h  skillSet.cpp  skillSet.h  storyReader.cpp  storyReader.h  sysdef.h  (+3 more)
